packages/cbl_ffi/lib/src/fleece.dart


// ignore: camel_case_extensions
extension CBLDart_FLDictIterator2Ext on CBLDart_FLDictIterator2 {
  bool get isDone => _isDone.toBool();
}

typedef CBLDart_FLDictIterator2_Begin_C = Pointer<CBLDart_FLDictIterator2>
    Function(
  Handle object,
  Pointer<FLDict> dict,
  Pointer<FLString> keyOut,
  Pointer<CBLDart_LoadedFLValue> valueOut,
);
typedef CBLDart_FLDictIterator2_Begin = Pointer<CBLDart_FLDictIterator2>
    Function(
  Object object,
  Pointer<FLDict> dict,
  Pointer<FLString> keyOut,
  Pointer<CBLDart_LoadedFLValue> valueOut,
);

typedef CBLDart_FLDictIterator2_Next_C = Void Function(
  Pointer<CBLDart_FLDictIterator2> iterator,
);
typedef CBLDart_FLDictIterator2_Next = void Function(
  Pointer<CBLDart_FLDictIterator2> iterator,
);

class FleeceDecoderBindings extends Bindings {
  FleeceDecoderBindings(Bindings parent) : super(parent) {
    _dumpData =
        libs.cblDart.lookupFunction<CBLDart_FLData_Dump_C, CBLDart_FLData_Dump>(
      'CBLDart_FLData_Dump',
    );
    _getLoadedFLValueFromData = libs.cblDart
        .lookupFunction<CBLDart_FLValue_FromData_C, CBLDart_FLValue_FromData>(
      'CBLDart_FLValue_FromData',
    );
    _getLoadedFLValue = libs.cblDart
        .lookupFunction<CBLDart_GetLoadedFLValue_C, CBLDart_GetLoadedFLValue>(
      'CBLDart_GetLoadedFLValue',
    );
    _getLoadedFLValueFromArray = libs.cblDart.lookupFunction<
        CBLDart_FLArray_GetLoadedFLValue_C, CBLDart_FLArray_GetLoadedFLValue>(
      'CBLDart_FLArray_GetLoadedFLValue',
    );
    _getLoadedFLValueFromDict = libs.cblDart.lookupFunction<
        CBLDart_FLDict_GetLoadedFLValue_C, CBLDart_FLDict_GetLoadedFLValue>(
      'CBLDart_FLDict_GetLoadedFLValue',
    );
    _dictIteratorBegin = libs.cblDart.lookupFunction<
        CBLDart_FLDictIterator2_Begin_C, CBLDart_FLDictIterator2_Begin>(
      'CBLDart_FLDictIterator2_Begin',
    );
    _dictIteratorNext = libs.cblDart.lookupFunction<
        CBLDart_FLDictIterator2_Next_C, CBLDart_FLDictIterator2_Next>(
      'CBLDart_FLDictIterator2_Next',
    );
  }

  final Pointer<CBLDart_LoadedFLValue> _globalLoadedFLValue = malloc();

  late final CBLDart_FLData_Dump _dumpData;
  late final CBLDart_FLValue_FromData _getLoadedFLValueFromData;
  late final CBLDart_GetLoadedFLValue _getLoadedFLValue;
  late final CBLDart_FLArray_GetLoadedFLValue _getLoadedFLValueFromArray;
  late final CBLDart_FLDict_GetLoadedFLValue _getLoadedFLValueFromDict;
  late final CBLDart_FLDictIterator2_Begin _dictIteratorBegin;
  late final CBLDart_FLDictIterator2_Next _dictIteratorNext;

  String dumpData(FLSlice data) {
    return _dumpData(data).toDartStringAndRelease()!;
  }

  bool getLoadedFLValueFromData(FLSlice data, FLTrust trust) {
    return _getLoadedFLValueFromData(
      data,
      trust.toInt(),
      _globalLoadedFLValue,
    ).toBool();
  }

  void getLoadedValue(Pointer<FLValue> value) {
    _getLoadedFLValue(value, _globalLoadedFLValue);
  }

  void getLoadedValueFromArray(
    Pointer<FLArray> array,
    int index,
  ) {
    _getLoadedFLValueFromArray(array, index, _globalLoadedFLValue);
  }

  void getLoadedValueFromDict(
    Pointer<FLDict> array,
    String key,
  ) {
    stringTable.autoFree(() {
      _getLoadedFLValueFromDict(
        array,
        stringTable.flString(key).ref,
        _globalLoadedFLValue,
      );
    });
  }

  Pointer<CBLDart_FLDictIterator2> dictIteratorBegin(
    Object object,
    Pointer<FLDict> dict,
    Pointer<FLString> keyOut,
    Pointer<CBLDart_LoadedFLValue> valueOut,
  ) {
    return _dictIteratorBegin(object, dict, keyOut, valueOut);
  }

  void dictIteratorNext(Pointer<CBLDart_FLDictIterator2> iterator) {
    _dictIteratorNext(iterator);
  }

  @override
  void dispose() {
    malloc.free(_globalLoadedFLValue);
    super.dispose();
  }
}

// === Encoder =================================================================

/// Output formats a Fleece encoder can generate.
enum FLEncoderFormat {
  /// Fleece encoding
  fleece,

  /// JSON encoding
  json,

  /// [JSON5](http://json5.org); an extension of JSON with a more readable
  /// syntax.
  json5,
}

extension on FLEncoderFormat {
  int toInt() => index;
}

class FLEncoder extends Opaque {}

typedef CBLDart_FLEncoder_New_C = Pointer<FLEncoder> Function(
  Handle object,
  Uint8 format,
  Uint64 reserveSize,
  Uint8 uniqueStrings,
);
typedef CBLDart_FLEncoder_New = Pointer<FLEncoder> Function(
  Object object,
  int format,
  int reserveSize,
  int uniqueStrings,
);

typedef FLEncoder_Reset_C = Void Function(Pointer<FLEncoder> encoder);
typedef FLEncoder_Reset = void Function(Pointer<FLEncoder> encoder);

typedef CBLDart_FLEncoder_WriteArrayValue_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Pointer<FLArray> array,
  Uint32 index,
);
typedef CBLDart_FLEncoder_WriteArrayValue = int Function(
  Pointer<FLEncoder> encoder,
  Pointer<FLArray> array,
  int index,
);

typedef FLEncoder_WriteValue_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Pointer<FLValue> value,
);
typedef FLEncoder_WriteValue = int Function(
  Pointer<FLEncoder> encoder,
  Pointer<FLValue> value,
);

typedef FLEncoder_WriteNull_C = Uint8 Function(Pointer<FLEncoder> encoder);
typedef FLEncoder_WriteNull = int Function(Pointer<FLEncoder> encoder);

typedef FLEncoder_WriteBool_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Uint8 value,
);
typedef FLEncoder_WriteBool = int Function(
  Pointer<FLEncoder> encoder,
  int value,
);

typedef FLEncoder_WriteInt_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Int64 value,
);
typedef FLEncoder_WriteInt = int Function(
  Pointer<FLEncoder> encoder,
  int value,
);

typedef FLEncoder_WriteDouble_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Double value,
);
typedef FLEncoder_WriteDouble = int Function(
  Pointer<FLEncoder> encoder,
  double value,
);

typedef CBLDart_FLEncoder_WriteString_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  FLString value,
);
typedef CBLDart_FLEncoder_WriteString = int Function(
  Pointer<FLEncoder> encoder,
  FLString value,
);

typedef CBLDart_FLEncoder_WriteData_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  FLSlice value,
);
typedef CBLDart_FLEncoder_WriteData = int Function(
  Pointer<FLEncoder> encoder,
  FLSlice value,
);

typedef CBLDart_FLEncoder_WriteJSON_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  FLString value,
);
typedef CBLDart_FLEncoder_WriteJSON = int Function(
  Pointer<FLEncoder> encoder,
  FLString value,
);

typedef CBLDart_FLEncoder_BeginArray_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Uint64 reserveCount,
);
typedef CBLDart_FLEncoder_BeginArray = int Function(
  Pointer<FLEncoder> encoder,
  int reserveCount,
);

typedef FLEncoder_EndArray_C = Uint8 Function(Pointer<FLEncoder> encoder);
typedef FLEncoder_EndArray = int Function(Pointer<FLEncoder> encoder);

typedef CBLDart_FLEncoder_BeginDict_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  Uint64 reserveCount,
);
typedef CBLDart_FLEncoder_BeginDict = int Function(
  Pointer<FLEncoder> encoder,
  int reserveCount,
);

typedef CBLDart_FLEncoder_WriteKey_C = Uint8 Function(
  Pointer<FLEncoder> encoder,
  FLString key,
);
typedef CBLDart_FLEncoder_WriteKey = int Function(
  Pointer<FLEncoder> encoder,
  FLString key,
);

typedef FLEncoder_EndDict_C = Uint8 Function(Pointer<FLEncoder> encoder);
typedef FLEncoder_EndDict = int Function(Pointer<FLEncoder> encoder);

typedef CBLDart_FLEncoder_Finish_C = FLSliceResult Function(
  Pointer<FLEncoder> encoder,
  Pointer<Uint32> errorOut,
);
typedef CBLDart_FLEncoder_Finish = FLSliceResult Function(
  Pointer<FLEncoder> encoder,
  Pointer<Uint32> errorOut,
);

typedef FLEncoder_GetError_C = Uint32 Function(Pointer<FLEncoder> encoder);
typedef FLEncoder_GetError = int Function(Pointer<FLEncoder> encoder);

typedef FLEncoder_GetErrorMessage_C = Pointer<Utf8> Function(
  Pointer<FLEncoder> encoder,
);
typedef FLEncoder_GetErrorMessage = Pointer<Utf8> Function(
  Pointer<FLEncoder> encoder,
);

class FleeceEncoderBindings extends Bindings {
  FleeceEncoderBindings(Bindings parent) : super(parent) {
    _new = libs.cblDart
        .lookupFunction<CBLDart_FLEncoder_New_C, CBLDart_FLEncoder_New>(
      'CBLDart_FLEncoder_New',
    );
    _reset = libs.cbl.lookupFunction<FLEncoder_Reset_C, FLEncoder_Reset>(
      'FLEncoder_Reset',
    );
    _writeArrayValue = libs.cblDart.lookupFunction<
        CBLDart_FLEncoder_WriteArrayValue_C, CBLDart_FLEncoder_WriteArrayValue>(
      'CBLDart_FLEncoder_WriteArrayValue',
    );
    _writeValue =
        libs.cbl.lookupFunction<FLEncoder_WriteValue_C, FLEncoder_WriteValue>(
      'FLEncoder_WriteValue',
    );
    _writeNull =
        libs.cbl.lookupFunction<FLEncoder_WriteNull_C, FLEncoder_WriteNull>(
      'FLEncoder_WriteNull',
    );
    _writeBool =
        libs.cbl.lookupFunction<FLEncoder_WriteBool_C, FLEncoder_WriteBool>(
      'FLEncoder_WriteBool',
    );
    _writeInt =
        libs.cbl.lookupFunction<FLEncoder_WriteInt_C, FLEncoder_WriteInt>(
      'FLEncoder_WriteInt',
    );
    _writeDouble =
        libs.cbl.lookupFunction<FLEncoder_WriteDouble_C, FLEncoder_WriteDouble>(
      'FLEncoder_WriteDouble',
    );
    _writeString = libs.cblDart.lookupFunction<CBLDart_FLEncoder_WriteString_C,
        CBLDart_FLEncoder_WriteString>(
      'CBLDart_FLEncoder_WriteString',
    );
    _writeData = libs.cblDart.lookupFunction<CBLDart_FLEncoder_WriteData_C,
        CBLDart_FLEncoder_WriteData>(
      'CBLDart_FLEncoder_WriteData',
    );
    _writeJSON = libs.cblDart.lookupFunction<CBLDart_FLEncoder_WriteJSON_C,
        CBLDart_FLEncoder_WriteJSON>(
      'CBLDart_FLEncoder_WriteJSON',
    );
    _beginArray = libs.cblDart.lookupFunction<CBLDart_FLEncoder_BeginArray_C,
        CBLDart_FLEncoder_BeginArray>(
      'CBLDart_FLEncoder_BeginArray',
    );
    _endArray =
        libs.cbl.lookupFunction<FLEncoder_EndArray_C, FLEncoder_EndArray>(
      'FLEncoder_EndArray',
    );
    _beginDict = libs.cblDart.lookupFunction<CBLDart_FLEncoder_BeginDict_C,
        CBLDart_FLEncoder_BeginDict>(
      'CBLDart_FLEncoder_BeginDict',
    );
    _writeKey = libs.cblDart.lookupFunction<CBLDart_FLEncoder_WriteKey_C,
        CBLDart_FLEncoder_WriteKey>(
      'CBLDart_FLEncoder_WriteKey',
    );
    _endDict = libs.cbl.lookupFunction<FLEncoder_EndDict_C, FLEncoder_EndDict>(
      'FLEncoder_EndDict',
    );
    _finish = libs.cblDart
        .lookupFunction<CBLDart_FLEncoder_Finish_C, CBLDart_FLEncoder_Finish>(
      'CBLDart_FLEncoder_Finish',
    );
    __getError =
        libs.cbl.lookupFunction<FLEncoder_GetError_C, FLEncoder_GetError>(
      'FLEncoder_GetError',
    );
    __getErrorMessage = libs.cblDart
        .lookupFunction<FLEncoder_GetErrorMessage_C, FLEncoder_GetErrorMessage>(
      'FLEncoder_GetErrorMessage',
    );
  }

  late final CBLDart_FLEncoder_New _new;
  late final FLEncoder_Reset _reset;
  late final CBLDart_FLEncoder_WriteArrayValue _writeArrayValue;
  late final FLEncoder_WriteValue _writeValue;
  late final FLEncoder_WriteNull _writeNull;
  late final FLEncoder_WriteBool _writeBool;
  late final FLEncoder_WriteInt _writeInt;
  late final FLEncoder_WriteDouble _writeDouble;
  late final CBLDart_FLEncoder_WriteString _writeString;
  late final CBLDart_FLEncoder_WriteData _writeData;
  late final CBLDart_FLEncoder_WriteJSON _writeJSON;
  late final CBLDart_FLEncoder_BeginArray _beginArray;
  late final FLEncoder_EndArray _endArray;
  late final CBLDart_FLEncoder_BeginDict _beginDict;
  late final CBLDart_FLEncoder_WriteKey _writeKey;
  late final FLEncoder_EndDict _endDict;
  late final CBLDart_FLEncoder_Finish _finish;
  late final FLEncoder_GetError __getError;
  late final FLEncoder_GetErrorMessage __getErrorMessage;

  Pointer<FLEncoder> create(
    Object object,
    FLEncoderFormat format,
    int reserveSize,
    bool uniqueStrings,
  ) {
    return _new(object, format.toInt(), reserveSize, uniqueStrings.toInt());
  }

  void reset(Pointer<FLEncoder> encoder) {
    _reset(encoder);
  }
